<resources>
    <string name="app_name">Shuffle Talks</string>
    <string name="home">Hjem</string>
    <string name="feed">Feed</string>
    <string name="profile">Profil</string>
    <string name="fab">Floating Action Button</string>
    <string name="feeden">Feed\'en</string>
    <string name="op">Forfatter</string>
    <string name="opslag">Opslag</string>
    <string name="create_new_post">Skriv nyt opslag</string>
    <string name="login">Login</string>
    <string name="username">Brugernavn</string>
    <string name="password">Kodeord</string>
    <string name="wrong_password">Forkert kodeord</string>
    <string name="no_such_user">Brugernavn eksisterer ikke</string>
    <string name="welcome">Velkommen</string>
    <string name="firstname">Fornavn</string>
    <string name="lastname">Efternavn</string>
    <string name="email">E-mail</string>
    <string name="submit">Opret</string>
    <string name="logout">Log ud</string>
    <string name="create_new_comment">Skriv kommentar</string>
    <string name="sign_up">Opret dig som bruger</string>
    <string name="city">By</string>
    <string name="answering_user">Svarer %1$s</string>
    <string name="number_of_posts">%1d svar</string>


</resources>