<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/usernameStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameStringTextView"
        android:layout_centerInParent="true"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/firstnameStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/firstname" />

    <EditText
        android:id="@+id/firstnameEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:layout_below="@id/firstnameStringTextView"/>

    <TextView
        android:id="@+id/lastnameStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/firstnameEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/lastname" />

    <EditText
        android:id="@+id/lastnameEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:layout_below="@id/lastnameStringTextView"/>

    <TextView
        android:id="@+id/emailStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lastnameEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:layout_below="@id/emailStringTextView"/>

    <TextView
        android:id="@+id/cityStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/emailEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/city" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:layout_below="@id/cityStringTextView"/>

    <TextView
        android:id="@+id/passwordStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/cityEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:layout_below="@id/passwordStringTextView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/fab"
        android:src="@drawable/btn_check_green_rust_round"
        android:tag="default"
        app:fabSize="normal"
        app:maxImageSize="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="6dp"
        app:tint="@null" />

</RelativeLayout>