<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/fragment_home">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/avatarRoundedImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:riv_corner_radius="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_app_round" />


    <EditText
        android:id="@+id/firstnameEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/firstname"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/avatarRoundedImageView"/>

    <EditText
        android:id="@+id/lastnameEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/lastname"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/firstnameEditText"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/lastnameEditText"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/fab"
        android:src="@drawable/btn_check_green_rust_round"
        android:tag="default"
        app:fabSize="normal"
        app:maxImageSize="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="6dp"
        app:tint="@null" />



</RelativeLayout>