<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/fragment_home">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/avatarRoundedImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:riv_corner_radius="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_app_round" />

    <RelativeLayout
        android:id="@+id/postCountLayout"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_below="@id/avatarRoundedImageView"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/greenSpeechBubble"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_speechbubble_rust_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/postcountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:text="1211"
            android:textColor="@color/white"
            android:textSize="25sp"
             />

    </RelativeLayout>

    <TextView
        android:id="@+id/firstnameStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postCountLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="Fornavn"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstnameStringTextView"
        android:layout_centerInParent="true"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:text="Søren" />

    <TextView
        android:id="@+id/lastnameStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstnameTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="Efternavn"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lastnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:text="Sørensen"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_below="@id/lastnameStringTextView"/>

    <TextView
        android:id="@+id/usernameStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastnameTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="Brugernavn"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:text="@string/username"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_below="@id/usernameStringTextView"/>

    <TextView
        android:id="@+id/emailStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailStringTextView"
        android:layout_centerInParent="true"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:text="@string/email" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/card_btn_background"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/fab"
        android:src="@drawable/btn_edit_green_round"
        android:tag="default"
        app:fabSize="normal"
        app:maxImageSize="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="6dp"
        app:tint="@null" />



</RelativeLayout>